# project_al

./: LICENSE  Makefile  Makefile.in  Readme.txt  al.cpp  bufx.cpp  bufx.h  catx.cpp  catx.h  configure  configure.in  hex_C_OLD  hexx.cpp  hexx.h  inoutx.cpp  inoutx.h  logx.cpp  logx.h  masterx.cpp  masterx.h  mksm  pl.cpp  plx.cpp  plx.h  pom  prepare  procx.cpp  procx.h  scoptions  smakefile  typy.h
